; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/regmap/extr_regmap-mmio.c_regmap_mmio_regbits_check.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/regmap/extr_regmap-mmio.c_regmap_mmio_regbits_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @regmap_mmio_regbits_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @regmap_mmio_regbits_check(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  switch i64 %4, label %6 [
    i64 8, label %5
    i64 16, label %5
    i64 32, label %5
  ]

5:                                                ; preds = %1, %1, %1
  store i32 0, i32* %2, align 4
  br label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %2, align 4
  br label %9

9:                                                ; preds = %6, %5
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
